--- a/.env
+++ b/.env
@@ -24,13 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=85778cada79b7f
-MAIL_PASSWORD=5ec4fe61703acf
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=cc36298b75-2085dc@inbox.mailtrap.io
-MAIL_FROM_NAME="Admin"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=tummysrefugio@gmail.com
+MAIL_PASSWORD=svbatiqzrekjhgwa
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
