--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ MAIL_PORT=587
 MAIL_USERNAME=tummysrefugio@gmail.com
 MAIL_PASSWORD=svbatiqzrekjhgwa
 MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=tummysrefugio@gmail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
